--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/uuid": "^10.0.0",
+    "@vapi-ai/server-sdk": "^0.9.1",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,6 +58,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "telegraf": "^4.16.3",
+    "twilio": "^5.7.1",
     "uuid": "^11.1.0",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
